version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/FE/CDB/CommandCETerm.rst.txt
.. vale off



:class:`CommandCETerm`
======================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.FE.CDB.CommandCETerm(iCETerm: Ansys.Common.Interop.FEParsePlugin_ANSYS.ICETerm)

   Bases: :py:obj:`object`


   
   Represents a term associated to a CE command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: CommandCETerm

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Coefficient`
            - Gets the coefficient.
          * - :py:attr:`~Dof`
            - Gets the degree of freedom.
          * - :py:attr:`~Node`
            - Gets the node number.







Property detail
---------------
.. py:property:: Coefficient
   :type: Optional[float]


   
   Gets the coefficient.
















   ..
       !! processed by numpydoc !!

.. py:property:: Dof
   :type: Optional[str]


   
   Gets the degree of freedom.
















   ..
       !! processed by numpydoc !!

.. py:property:: Node
   :type: Optional[int]


   
   Gets the node number.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on